After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 742720 - Empathy does not honour auto-away
Empathy does not honour auto-away
Status: RESOLVED FIXED
Product: empathy
Classification: Core
Component: General
3.12.x
Other Linux
: Normal normal
: ---
Assigned To: empathy-maint
empathy-maint
Depends on:
Blocks:
 
 
Reported: 2015-01-10 18:59 UTC by Christoph Lenggenhager
Modified: 2016-07-22 01:30 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Let Empathy watch session state again even if gnome shell is running (1.42 KB, patch)
2015-03-21 12:48 UTC, Christoph Lenggenhager
reviewed Details | Review
Honor autoaway setting even in GNOME Shell (2.40 KB, patch)
2016-07-22 01:30 UTC, Michael Catanzaro
committed Details | Review

Description Christoph Lenggenhager 2015-01-10 18:59:39 UTC
Empathy does not switch to away when the session switches to idle.

There is an according comment in the source that states that the shell is taking care of this. However, since (I guess) Gnome 3.10 this is no longer the case.

This results in the fact that the presence stays available even though the session is idle.

I'm not familiar with the plans regarding the integration of presence information into the shell again after it has been removed with the newest version of the system menu at the top left.
Either this should be fixed in empathy, i.e. honouring the auto-away setting also if executed within the Gnome Shell, or the Gnome Shell has to be fixed...
Comment 1 Christoph Lenggenhager 2015-03-21 12:48:53 UTC
Created attachment 300019 [details] [review]
Let Empathy watch session state again even if gnome shell is running

This patch makes empathy watching the session state again in all cases and auto-away works again.
Comment 2 Michael Catanzaro 2016-07-22 01:23:41 UTC
Review of attachment 300019 [details] [review]:

Thanks for this patch. It's not the right place to move the code to, though; since the autoaway stuff no longer depends on whether we're running in GNOME, it should be moved out of list_names_cb. Probably empathy_app_activate is the right place for this code now.

::: src/empathy.c
@@ +262,3 @@
     }
+
+  gboolean autoaway;

Empathy (and common GNOME) coding style is to put variable declarations at the top of the block. It's not good practice nowadays, but it's ingrained habit after years of using C89, and let's not change it in this patch.
Comment 3 Michael Catanzaro 2016-07-22 01:30:20 UTC
The following fix has been pushed:
f334edc Honor autoaway setting even in GNOME Shell
Comment 4 Michael Catanzaro 2016-07-22 01:30:23 UTC
Created attachment 331948 [details] [review]
Honor autoaway setting even in GNOME Shell

GNOME stopped handling presence ages ago... I think it was GNOME 3.8.

Based on work by Christoph Lenggenhager.