Honor autoaway setting even in GNOME Shell

GNOME stopped handling presence ages ago... I think it was GNOME 3.8.

Based on work by Christoph Lenggenhager.

https://bugzilla.gnome.org/show_bug.cgi?id=742720